# jsongeek

./: .gitignore  DESCRIPTION.rst  MANIFEST.in  README.md  README.pypi.md  SECURITY.md  contributing.md  dual_model_validation.md  mcp_test_final_report.md  pyproject.toml  setup.cfg  setup.py
benchmark/: pom.xml
benchmark/docs/: benchmark_results.md  benchmark_setup.md  performance_analysis.md  performance_charts.md
benchmark/json-benchmark/: dependency-reduced-pom.xml  pom.xml
benchmark/json-benchmark/bridge/: jsongeek-bridge.js  jsongeek-bridge.ts  package-lock.json  package.json  tsconfig.json
benchmark/json-benchmark/bridge/src/core/cache/: LRUCache.ts  MultiLevelCache.ts
benchmark/json-benchmark/bridge/src/core/parser/: OptimizedParser.ts  StringPool.ts
benchmark/json-benchmark/bridge/src/core/wasm/: WasmParser.ts
benchmark/json-benchmark/src/main/java/com/jsongeek/benchmark/: JsonParserBenchmark.java
benchmark/json-benchmark/src/main/java/com/jsongeek/benchmark/bridge/: JsonGeekBridge.java
benchmark/src/: test_simd_performance.py
benchmark/src/main/java/com/jsongeek/: JsonGeekAI.java
benchmark/src/main/java/com/jsongeek/benchmark/: JsonBenchmark.java
benchmark/src/main/java/com/jsongeek/benchmark/model/: Order.java
docs/: README.md  index.html
docs/contributing/: README.md
docs/css/: style.css
docs/examples/: README.md
docs/installation/: README.md
docs/release/v0.1.0/examples/: performance_optimization.ts
jsongeek/core/: parser.py  stream.py  validator.py
jsongeek/core/wasm/: asconfig.json  package-lock.json  package.json
jsongeek/core/wasm/assembly/: fallback.ts  simd.ts  types.ts
jsongeek/java/: JsonGeekBridge.java  JsonGeekException.java  JsonGeekMetrics.java
jsongeek/utils/: compression.py
tests/: test_compliance.py  test_config.py  test_performance.py
tests/benchmark/: JsonBenchmark.ts
tests/integrations/: test_core.py
tests/java/: JsonGeekBridgeTest.java
tests/p0/: test_core.py  test_core_features.py  test_simd_core.py
tests/p1/: test_structure_validation.py
website/: index.html  index_spa.html  standalone.md  standalone_min.md  standalone_min2.md  standalone_min3.md  standalone_min4.md  standalone_min5.md  standalone_min6.md
website/blog/tutorials/: axios-mock-tutorial.html
website/contact/: index.html
