[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jsongeekai"
version = "0.1.1"
description = "High Performance JSON Parser with SIMD Optimization and AI Features"
readme = "README.md"
authors = [
    {name = "JsonGeek Team", email = "support@jsongeek.ai"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Programming Language :: WebAssembly",
]

dependencies = [
    "wasmer>=1.1.0",
    "wasmer-compiler-cranelift>=1.1.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-benchmark>=3.4.1",
    "black>=22.3.0",
    "isort>=5.10.1",
    "mypy>=0.950",
]
ai = [
    "tensorflow>=2.8.0",
    "torch>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/algorithm07-ai/jsongeek"
Documentation = "https://github.com/algorithm07-ai/jsongeek/tree/main/docs"
Repository = "https://github.com/algorithm07-ai/jsongeek.git"
"Bug Tracker" = "https://github.com/algorithm07-ai/jsongeek/issues"
"Change Log" = "https://github.com/algorithm07-ai/jsongeek/blob/main/CHANGELOG.md"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "wasmer.*",
]
ignore_missing_imports = true
