[metadata]
name = jsongeekai
version = 0.1.1
author = JsonGeek Team
author_email = support@jsongeek.ai
description = High Performance JSON Parser with SIMD Optimization and AI Features
long_description = file: README.pypi.md
long_description_content_type = text/markdown
url = https://github.com/algorithm07-ai/jsongeek
project_urls =
    Bug Tracker = https://github.com/algorithm07-ai/jsongeek/issues
    Documentation = https://github.com/algorithm07-ai/jsongeek/tree/main/docs
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: WebAssembly
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    wasmer>=1.1.0
    wasmer-compiler-cranelift>=1.1.0
    numpy>=1.20.0

[options.extras_require]
dev =
    pytest>=6.0
    pytest-benchmark>=3.4.1
    black>=22.3.0
    isort>=5.10.1
    mypy>=0.950
ai =
    tensorflow>=2.8.0
    torch>=1.10.0

[options.packages.find]
where = .
exclude =
    tests*
    docs*
    examples*
